add ui with copilot's help

--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@
     <head>
         <script src="./script/script.js"></script>
     </head>
+    <body>
+        <button onclick="playRound('ROCK')">Rock</button>
+        <button onclick="playRound('PAPER')">Paper</button>
+        <button onclick="playRound('SCISSORS')">Scissors</button>   
+        
+    </body>
 </html>
